--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
     src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-regular-webfont.woff");
 }
 
-/*#08fdd8*/
+/*#08FDD8*/
 
 *{
     font-family: "San Francisco";
@@ -19,7 +19,7 @@ body{
 }
 
 h1{
-    color: #BB86FC;
+    color: #08FDD8;
     font-size: 42px;
     font-weight: bold;
 }
@@ -57,7 +57,7 @@ h4{
 
 .sidebar ul li a:hover{
     font-weight: bold;
-    color : #BB86FC;
+    color : #08FDD8;
 }
 
 .social ul {
@@ -79,7 +79,7 @@ h4{
 }
 
 .social ul li a:hover{
-    color : #BB86FC;
+    color : #08FDD8;
 }
 
 .home-text{
@@ -95,7 +95,7 @@ h4{
 .contactbtn{
     display: inline-block;
     padding: 0.6em 1.7em;
-    border: 0.1em solid #BB86FC;
+    border: 0.1em solid #08FDD8;
     margin: 0 0.3em 0.3em 0;
     border-radius: 0.12em;
     box-sizing: border-box;
@@ -110,7 +110,7 @@ h4{
 
 .contactbtn:hover{
     color: #272727;
-    background-color: #BB86FC
+    background-color: #08FDD8
 }
 
 
@@ -127,5 +127,3 @@ h4{
     width: 100%;
     background-color: darkgray;
 }
-
-  
