--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,15 @@ p{
     width: 60%;
 }
 
+::-webkit-scrollbar{
+    width: 10px;
+}
+
+::-webkit-scrollbar-thumb{
+    background: #2b2b2b;
+}
+
+
 .sidebar{
     display: flex;
     align-items: center;
@@ -119,7 +128,7 @@ p{
     text-decoration: none;
     font-family: "Roboto", sans-serif;
     font-weight: 300;
-    background-color: #1d1d1d;
+    background-color: transparent;
     color: #08FDD8;
     text-align: center;
     transition: all 0.2s;
