--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,10 @@
     src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-regular-webfont.woff");
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 *{
     font-family: "San Francisco";
     margin: 0;
