--- a/styles.css
+++ b/styles.css
@@ -16,13 +16,29 @@ html{
     text-decoration: none;
 }
 
+*::before,*::after {
+    box-sizing: border-box;
+}
+
 input{
     display: inline-block;
     appearance: auto;
 }
 
+input:focus{
+    color: white;
+}
+
+input[type = submit]{
+    cursor: pointer;
+}
+
 body{
     background-color: #1d1d1d;
+}
+
+button{
+    cursor: pointer;
 }
 
 h1{
@@ -32,12 +48,23 @@ h1{
     
 }
 
+h3{
+    font-weight: lighter;
+}
+
 h4{
     color: white;
     font-weight: lighter;
 }
 
-p{
+section{
+    display: flex;
+    flex-direction: column;
+    margin-top: 50px;
+    margin-bottom: 300px;
+}
+
+section p{
     display: block;
     justify-content: left;
     margin-block-start: 1em;
@@ -46,6 +73,10 @@ p{
     margin-inline-start: 0px;
     padding: 10px;
     width: 60%;
+}
+
+section:last-child{
+    margin-bottom: 100px;
 }
 
 ::-webkit-scrollbar{
@@ -60,12 +91,27 @@ p{
     background: #8d8d8d;
 }
 
-.language{
+::selection {
+    color: white;
+    background: #FF2253;
+}
+
+.sidebar nav .active{
+    color: #08FDD8;
+}
+
+.language ul li {
+    display:inline; 
+    justify-content:center;
     font-size: 14px;
     color: #8d8d8d;
-    position: relative;
-    margin-left: 20px;
-    margin-top: 10px;
+    position: fixed; 
+    padding: 20px;
+    margin: 10px;
+}
+
+#about{
+    margin: 300px 0 500px 0;
 }
 
 .sidebar{
@@ -73,48 +119,37 @@ p{
     align-items: center;
     position: fixed;
     height : 100%;
-    /*z-index: 1;
-    top: 0;
-    left: 0;
-    overflow-x: hidden;
-    */
     background: #121212; 
 }
 
-.sidebar ul li {
-    display:flex; 
+.sidebar nav a {
+    color : #909096;
+    display : flex; 
     justify-content: center;
-    position: relative; 
-    margin:0 auto;
     padding: 15px;
     border-bottom: 1px solid #1d1d1d;
 }
 
-.sidebar ul li:first-child {
+.sidebar nav a:first-child {
     border-top: 1px solid #1d1d1d;
 }
 
-.sidebar ul li a{
-    color : #909096;
-}
-
-.sidebar ul li a:hover{
+.sidebar nav a:hover{
     color : #08FDD8;
 }
 
 .social ul {
+    display: flex;
     position: fixed;
     bottom: 20px;
     left: 0.8%;
 }
+
 .social ul li {
-    display:inline; 
-    justify-content:center;
-    position: relative; 
-    margin:0 auto;
-    padding: 2px;
+    margin: 7.5%;
 
 }
+
 
 .social ul li a{
     color : #909096;
@@ -135,7 +170,6 @@ p{
 }
 
 .contactbtn{
-    display: inline-block;
     padding: 0.7em 1.7em;
     border: 0.1em solid #08FDD8;
     margin: 0 0.3em 0.3em 0;
@@ -150,11 +184,28 @@ p{
     transition: all 0.2s;
 }
 
+.msgbtn{
+    display: inline;
+    padding: 0.5em 1.25em;
+    border: 0.1em solid #08FDD8;
+    margin: 0 0.3em 0.3em 0;
+    border-radius: 0.12em;
+    box-sizing: border-box;
+    text-decoration: none;
+    font-family: "Roboto", sans-serif;
+    font-weight: 300;
+    background-color: transparent;
+    color: #08FDD8;
+    text-align: center;
+    transition: all 0.2s;
+    float: right;
+}
+
 .alertbtn{
     display: inline-block;
-    padding: 0.7em 1.7em;
+    padding: 0.5em 1.25em;
     border: 0.1em solid #FF2253;
-    margin: 0 0.3em 0.3em 0;
+    margin: 1rem 0.3em 0.3em 0;
     border-radius: 0.12em;
     box-sizing: border-box;
     text-decoration: none;
@@ -164,12 +215,12 @@ p{
     color: #FF2253;
     text-align: center;
     transition: all 0.2s;
-    position: absolute;
+    position: relative;
 }
 
 .warningbtn{
     display: inline-block;
-    padding: 0.7em 1.7em;
+    padding: 0.5em 1.25em;
     border: 0.1em solid #CCFF00;
     margin: 0 0.3em 0.3em 0;
     border-radius: 0.12em;
@@ -181,7 +232,7 @@ p{
     color: #CCFF00;
     text-align: center;
     transition: all 0.2s;
-    position: absolute;
+    position: relative;
 }
 
 .contactbtn:hover{
@@ -189,9 +240,15 @@ p{
     background-color: #08FDD8;
 }
 
+.msgbtn:hover{
+    color: #1d1d1d;
+    background-color: #08FDD8;
+}
+
 .alertbtn:hover{
     color: #1d1d1d;
     background-color: #FF2253;
+    
 }
 
 .warningbtn:hover{
@@ -203,40 +260,26 @@ p{
     position: absolute;
 }
 
-.home{
-    margin-bottom: 300px;
-}
-.section{
-    margin-top: 50px;
-    margin-bottom: 300px;
-}
-
-.section:last-child{
-    margin-bottom: 50px;
-}
 
 .form{
     width: 40%;
 }
 
+/* #active{
+    color : #08FDD8;
+} */
+
 .small-input{
     background: #2b2b2b;
     color: #8d8d8d;
+    display: flex-start;
     border: none;
     padding: 15px;
-    margin : 4px;
+    margin: 4px 0 4px 0;
     font-size: 16px;
+    align-content: stretch;
 }
 
-.medium-input{
-    background: #2b2b2b;
-    color: #8d8d8d;
-    border: none;
-    padding: 15px;
-    margin: 4px;
-    font-size: 16px;
-    width: fit-content;
-}
 
 .large-input{
     width: 100%;
@@ -244,7 +287,7 @@ p{
     color: #8d8d8d;
     border: none;
     padding: 15px;
-    margin: 4px;
+    margin: 4px 0 4px 0;
     font-size: 16px;
 }
 
@@ -252,10 +295,75 @@ p{
     width: 100%;
     background: #2b2b2b;
     color: #8d8d8d;
-    min-height: 120px;
+    min-height: 150px;
     border: none;
     padding: 15px;
-    margin: 4px;
+    margin: 4px 0 4px 0;
     font-size: 16px;
     margin-bottom: 25px;
+}
+
+.timeline{
+    padding-top: 200px;
+    padding-bottom: 200px;
+    display: flex;
+    justify-content: center;
+}
+
+.timeline img{
+    width: 65%;
+    height: auto;
+}
+
+.project-cards{
+    margin-top : 75px;
+    display: flex;
+    justify-content: left;
+    line-height: 1.6;
+}
+
+.card {
+    color : white;
+    background-size: cover;
+    background-image: url("assets/p1-temp.jpg");
+    padding: 20rem 0 0 ;
+    max-width: 35ch;
+    margin: 30px;
+    border-radius: 0.25rem;
+    overflow: hidden;
+    transition: transform 300ms ease;
+
+}
+
+.card h2{
+    margin: 0.5rem 0 0.5rem 0;
+}
+
+.card:hover, .card:focus-within {
+    transform: scale(1.025);
+}
+
+.card-content {
+    --padding: 1.5rem;
+    padding: var(--padding);
+    background: linear-gradient( hsl(0 0% 0% / 0), hsl(0 0% 0% / 0.25) 15%, hsl(0 0% 0% / 1 ));
+    transform: translateY(70%);
+    transition: transform 300ms ease;
+}
+
+.card:hover .card-content{
+    transform: translateY(0);
+}
+
+.project-title{
+    position: relative;
+    width: max-content;
+    color: rgb(255 255 255 / 0.85);
+    /*max-width: 100%;*/
+}
+
+.project-body{
+    color: rgb(255 255 255 / 0.85);
+    margin-top: 1rem;
+    width: 100%;
 }
